# hMath

./: Cargo.toml  README.md  TODO.md
src/: big_int.rs  bigint.rs  complex.rs  consts.rs  err.rs  fp192.rs  impl_macros.rs  lib.rs  matrix.rs  poly.rs  ratio.rs  sqrt.rs  ubigint.rs  utils.rs  wrapper.rs
src/big_int/: arith.rs  comp.rs  conv.rs  funcs.rs
src/big_int/arith/: add.rs  div.rs  mul.rs  rem.rs  sub.rs
src/bigint/: comp.rs  convert.rs  funcs.rs
src/bigint/arith/: add.rs  div.rs  mul.rs  pow.rs  rem.rs  sub.rs
src/bigint/convert/: from.rs  into.rs
src/complex/: convert.rs  funcs.rs
src/complex/arith/: add.rs
src/fp192/: comp.rs  consts.rs  convert.rs  funcs.rs  testbench.rs
src/fp192/arith/: add.rs  div.rs  mul.rs  sub.rs
src/fp192/convert/: string.rs
src/fp192/funcs/: atrigo.rs  ln.rs  pow.rs  sqrt.rs  trigo.rs
src/matrix/: arith.rs  det.rs  err.rs  inv.rs  utils.rs
src/poly/: from_points.rs
src/ratio/: arith.rs  comp.rs  conv.rs  convert.rs  e.rs  funcs.rs  ln2.rs  pi.rs
src/ratio/arith/: add.rs  div.rs  mul.rs  pow.rs  sub.rs
src/ratio/convert/: from.rs  ieee754.rs  into.rs
src/ratio/funcs/: atrigo.rs  exp.rs  hyper.rs  ln.rs  pow.rs  root.rs  trigo.rs
src/ubigint/: arith.rs  comp.rs  convert.rs  funcs.rs
src/ubigint/arith/: add.rs  div.rs  mul.rs  pow.rs  rem.rs  sub.rs
src/ubigint/convert/: from.rs  into.rs
src/ubigint/funcs/: exp.rs  log.rs  shift.rs
src/wrapper/: arith.rs  comp.rs  conv.rs
src/wrapper/arith/: add.rs  div.rs  mul.rs  rem.rs  sub.rs
