[package]
name = "hmath"
version = "0.1.1"
edition = "2021"
description = "Big Integers and Rational Numbers"
repository = "https://github.com/baehyunsol/hmath"
license = "MIT"
authors = ["Baehyunsol <baehyunsol@naver.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", optional = true }

[features]
rand = ["dep:rand"]
